--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -101,7 +101,7 @@ If you get an error like one of the following,
 
 \noindent
 then the problem may be that you have not set the \code{CHECKERFRAMEWORK} environment
-variable, as described in Section~\ref{javac-installation}.  Or, maybe
+variable, as described in Section~\ref{javac-wrapper}.  Or, maybe
 you made it a user variable instead of a system variable.
 
 \item
@@ -118,7 +118,7 @@ The type com.sun.source.util.AbstractTypeProcessor cannot be resolved.
 \noindent
 then you are likely \textbf{not} using the Checker Framework compiler.  Use
 either \code{\$CHECKERFRAMEWORK/checker/bin/javac} or one of the alternatives
-described in Section~\ref{javac-installation}.
+described in Section~\ref{javac-wrapper}.
 \end{sloppypar}
 
 
