--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -284,7 +284,7 @@ tutorial} by David B\"urgin.
 %
 % \noindent
 % but take note that the \code{javac} command must refer to the
-% Checker Framework compiler (see Section~\ref{javac-installation}).
+% Checker Framework compiler (see Section~\ref{javac-wrapper}).
 %
 % If you usually do your coding within an IDE, you will need to configure
 % the IDE; see Chapter~\ref{external-tools}.
@@ -325,7 +325,7 @@ public class GetStarted {
 %END LATEX
 
 \noindent
-where \emph{\code{javac}} is set as in Section~\ref{javac-installation}.
+where \emph{\code{javac}} is set as in Section~\ref{javac-wrapper}.
 
 \item
   To compile within your IDE, you must have customized it to use the
@@ -469,7 +469,7 @@ A concrete example (using the Nullness Checker) is:
 \end{Verbatim}
 
 \noindent
-where \<javac> is as specified in Section~\ref{javac-installation}.
+where \<javac> is as specified in Section~\ref{javac-wrapper}.
 
 You can also run a checker from within your favorite IDE or build system.  See
 Chapter~\ref{external-tools} for details about build tools such as
