--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -421,14 +421,16 @@ use the last one.
 % \end{itemize}
 
 
-\sectionAndLabel{Other tools}{javac}
+\sectionAndLabel{Command line, via JDK javac}{javac}
 
-This section explains how to use the Checker Framework with \<javac>.  This is
-useful if you do not wish to use the \<javac> wrapper script described in
-Section~\ref{javac-installation} or to help you adapt your build tool.  This
+This section explains how to use the Checker Framework with the OpenJDK or
+OracleJDK \<javac>, rather than with the \<javac> wrapper script described in
+Section~\ref{javac-installation}.
+
+This
 section assumes you have downloaded the Checker Framework release zip and set
-the environment variable \<CHECKERFRAMEWORK> to point to the unziped directory.
-You can also get all of the jars mentioned in this section from Maven Central:
+the environment variable \<CHECKERFRAMEWORK> to point to the unzipped directory.
+Alternately, you can get all of the jars mentioned in this section from Maven Central:
 
 \begin{itemize}
 \item \<javac.jar>: \url{https://search.maven.org/artifact/com.google.errorprone/javac/9%2B181-r4173-1/jar}
@@ -437,11 +439,14 @@ You can also get all of the jars mentioned in this section from Maven Central:
 \item \<checker.jar>: \url{https://search.maven.org/artifact/org.checkerframework/checker/2.11.0/jar}
 \end{itemize}
 
-Different arguments are required for Java 8, Section~\ref{java8-install}, and Java 9+, Section~\ref{java11-install}.
+Different arguments to \<javac> are required for Java 8
+(Section~\ref{java8-install}) and for Java 9+ (Section~\ref{java11-install}).
+
 
 \subsectionAndLabel{Java 8}{java8-install}
 
-This sections show what arguments to pass to javac to run the Checker Framework using JDK 8.
+This section shows what arguments to pass to javac to run the Checker
+Framework, if you are using JDK 8.
 
 \begin{Verbatim}
 javac \
@@ -455,18 +460,21 @@ javac \
 
 Below is an explanation of each argument.
 \begin{enumerate}
-\item \<-J-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/javac.jar>: the
-ErrorProne javac.jar, the OpenJDK Java 9 compiler, must be on the JVM
-bootclasspath. The \<-J> indicates that this is a JVM argument rather than a
-compiler argument.
+\item \<-J-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/javac.jar>:
+even when running under JDK 8, a Java 9 compiler (either the Error Prone
+compiler or the OpenJDK Java 9 compiler) must be on the JVM bootclasspath.
+The \<-J> indicates that this is a JVM argument rather than a compiler
+argument.
 
 The following exception is thrown if this argument is missing:
 \begin{Verbatim}
-error: SourceChecker.typeProcessingStart: unexpected Throwable (NoSuchMethodError); message: com.sun.tools.javac.code.Type.stripMetadata()Lcom/sun/tools/javac/code/Type;
+error: SourceChecker.typeProcessingStart: unexpected Throwable (NoSuchMethodError);
+message: com.sun.tools.javac.code.Type.stripMetadata()Lcom/sun/tools/javac/code/Type;
 \end{Verbatim}
 
 \item \<-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/jdk8.jar>: jdk8.jar
-must be on the bootclasspath of the compiler.  (This is a compiler arguments, so do not add \<-J>.)
+  must be on the bootclasspath of the compiler.
+  (This is a compiler argument, so do not add \<-J>.)
 
 \item \<-cp \$CHECKERFRAMEWORK/checker/dist/checker-qual.jar>: checker-qual.jar
 must be on the compilation classpath.
@@ -477,19 +485,20 @@ searched for other annotation processors.
 
 \item \<-processor org.checkerframework.checker.nullness.NullnessChecker>:
 Choose which checker to run by passing its fully qualified name as a processor.
-(Note, using this options means that javac will not search for annotation
-processors, but rather run only those specified here.)
+(Note, using this option means that javac will not search for annotation
+processors, but rather will run only those specified here.)
 
-\item \<-source 8 -target 8>: Because using the ErrorProne \<javac.jar> turns
-the Java 8 compiler into a Java 9 compiler, these options ensure that the
+\item \<-source 8 -target 8>: Because the build is using
+a Java 9 compiler, these options ensure that the
 source code is Java 8 and that Java 8 bytecode is created.
 
 \end{enumerate}
 
+
 \subsectionAndLabel{Java 11}{java11-install}
 
 This section shows what arguments to pass to javac to run the Checker Framework using JDK 11.  These
-instructions should work on JDK 9 or newer, but we only test with JDK 11.
+instructions should work on JDK 9 or later, but we only test with JDK 11.
 
 For compiling non-modularized code:
 \begin{Verbatim}
@@ -500,10 +509,10 @@ javac \
 -processor org.checkerframework.checker.nullness.NullnessChecker
 \end{Verbatim}
 
-\<-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED>: opens the
-\<jdk.compiler/com.sun.tools.java.comp> package.  This is required because the
-Checker Framework reflectivly accesses this package.  The rest of the arguments
-are explained above.
+The arguments are explained above, except for
+\<-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED> which
+opens the \<jdk.compiler/com.sun.tools.java.comp> package.  This is
+required because the Checker Framework reflectively accesses this package.
 
 If this option is missing, \<javac> may issue the following warning:
 \begin{Verbatim}
@@ -516,7 +525,7 @@ WARNING: All illegal access operations will be denied in a future release
 
 For compiling a module, first add \<requires
 org.checkerframework.checker.qual;> to your \<module-info.java>.  The Checker
-Framework inserts annotations into bytecode even if none appear in source code,
+Framework inserts inferred annotations into bytecode even if none appear in source code,
 so you must do this even if you write no annotations in your code.
 
 \begin{Verbatim}
