Add JDK 11 to manual.

--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -830,8 +830,7 @@ You might want to add an \<export CHECKERFRAMEWORK=...> line to your
 %  * the location of tools.jar, below.
 %  * the default location of CTSYM, in checker/jdk/Makefile.
 Set the \<JAVA\_HOME> environment variable to the location of your JDK
-8 installation (not the JRE installation, and not JDK 7 or earlier).
-This needs to be an Oracle JDK.
+8 or JDK 11 installation (not the JRE installation, and not JDK 7 or earlier).
 (The \<JAVA\_HOME> environment
 variable might already be set, because it is needed for Ant to work.)
 
