--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -622,7 +622,10 @@ then you can enable Checker Framework checkers by following the
 instructions below.
 
 See the directory \code{docs/examples/MavenExample/} for examples of the use of
-Maven build files that run a checker.  These examples can be used to verify that
+Maven build files that run a checker with JDK 8.
+See the directory \code{docs/examples/MavenExampleJDK11/} for examples of the use of
+Maven build files that run a checker with JDK 11.
+These examples can be used to verify that
 Maven is correctly downloading the Checker Framework from the
 \href{https://search.maven.org/search?q=org.checkerframework}{Maven
   Central Repository} and executing it.
@@ -657,6 +660,7 @@ checker as an annotation processor directly.
       <artifactId>checker-qual</artifactId>
       <version>\ReleaseVersion{}</version>
     </dependency>
+    <!-- If using JDK 8, add the following additional dependencies -->
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>jdk8</artifactId>
@@ -718,9 +722,9 @@ latest bug fixes and new features:
 \end{enumerate}
 
 
-\item Use Maven properties to hold the locations of the
-  annotated JDK.  It was declared as Maven dependencies above.
-To set the value of this property automatically, you will use the Maven Dependency plugin.
+\item If using JDK 8, use Maven properties to hold the locations of the
+  annotated JDK and ErrorProne javac.jar.  They were declared as Maven dependencies above.
+To set the value of these properties automatically, you will use the Maven Dependency plugin.
 
 First, create the property in the \code{properties} section of the POM:
 
@@ -763,8 +767,11 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
     <version>3.8.0</version>
     <configuration>
       <fork>true</fork>
+      <!-- If using JDK 8, add source and target. -->
       <source>1.8</source>
       <target>1.8</target>
+      <!-- If using JDK 11, remove source and target and uncomment "release" below. -->
+      <!-- <release>11</release> -->
       <compilerArguments>
         <Xmaxerrs>10000</Xmaxerrs>
         <Xmaxwarns>10000</Xmaxwarns>
@@ -783,8 +790,10 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
       <compilerArgs>
         <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
         <arg>-J-Xbootclasspath/p:$\{errorProneJavac\}</arg>
-        <!-- location of the annotated JDK, which comes from a Maven dependency -->
+        <!-- location of the annotated JDK 8, which comes from a Maven dependency -->
         <arg>-Xbootclasspath/p:$\{annotatedJdk\}</arg>
+        <!-- If using JDK 11 remove the two arguments above and uncomment the one below -->
+        <!-- <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->
         <!-- -Awarns turns type-checking errors into warnings. -->
         <!-- <arg>-Awarns</arg> -->
       </compilerArgs>
