--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -210,7 +210,7 @@ Alternately, you can build the latest development version from source
 % Not "\url" because it looks bad in the printed manual.
 \textbf{Requirement:}
 You must have \textbf{JDK 8} or \textbf{JDK 11} installed.
-(The Checker Framework should work with any JDK 8+, but we only test with JDK 8 and JDK 11 )
+(The Checker Framework should work with any JDK 8+, but we only test with JDK 8 and JDK 11.)
 
 The installation process is simple!  It has two required steps and one
 optional step.
