--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -209,11 +209,8 @@ Alternately, you can build the latest development version from source
 
 % Not "\url" because it looks bad in the printed manual.
 \textbf{Requirement:}
-You must have \textbf{JDK 8}
-% or later
-installed.  You can get the JDK from
-\href{https://www.oracle.com/technetwork/java/javase/downloads/index.html}{Oracle}
-or elsewhere.
+You must have \textbf{JDK 8} or \textbf{JDK 11} installed.
+(The Checker Framework should work with any JDK 8+, but we only test with JDK 8 and JDK 11.)
 
 The installation process is simple!  It has two required steps and one
 optional step.
