--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -748,7 +748,10 @@ then you can enable Checker Framework checkers by following the
 instructions below.
 
 See the directory \code{docs/examples/MavenExample/} for examples of the use of
-Maven build files that run a checker.  These examples can be used to verify that
+Maven build files that run a checker with JDK 8.
+See the directory \code{docs/examples/MavenExampleJDK11/} for examples of the use of
+Maven build files that run a checker with JDK 11.
+These examples can be used to verify that
 Maven is correctly downloading the Checker Framework from the
 \href{https://search.maven.org/search?q=org.checkerframework}{Maven
   Central Repository} and executing it.
@@ -783,10 +786,16 @@ checker as an annotation processor directly.
       <artifactId>checker-qual</artifactId>
       <version>\ReleaseVersion{}</version>
     </dependency>
+    <!-- If using JDK 8, add the following additional dependencies -->
     <dependency>
       <groupId>org.checkerframework</groupId>
       <artifactId>jdk8</artifactId>
       <version>\ReleaseVersion{}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.errorprone</groupId>
+      <artifactId>javac</artifactId>
+      <version>9+181-r4173-1</version>
     </dependency>
   </dependencies>
 \end{alltt}
@@ -828,21 +837,20 @@ latest bug fixes and new features:
       <scope>system</scope>
       <systemPath>\$\{env.CHECKERFRAMEWORK\}/checker/dist/jdk8.jar</systemPath>
     </dependency>
+    <dependency>
+    <groupId>com.google.errorprone</groupId>
+      <artifactId>javac</artifactId>
+      <version>9+181-r4173-1</version>
+    </dependency>
   </dependencies>
 \end{alltt}
-
-Periodically update to the most recent version, to obtain the
-latest bug fixes and new features:
-\begin{Verbatim}
-  mvn versions:use-latest-versions -Dincludes="org.checkerframework:*"
-\end{Verbatim}
 
 \end{enumerate}
 
 
-\item Use Maven properties to hold the locations of the
-  annotated JDK.  It was declared as Maven dependencies above.
-To set the value of this property automatically, you will use the Maven Dependency plugin.
+\item If using JDK 8, use Maven properties to hold the locations of the
+  annotated JDK and ErrorProne javac.jar.  They were declared as Maven dependencies above.
+To set the value of these properties automatically, you will use the Maven Dependency plugin.
 
 First, create the property in the \code{properties} section of the POM:
 
@@ -850,6 +858,7 @@ First, create the property in the \code{properties} section of the POM:
 <properties>
   <!-- These properties will be set by the Maven Dependency plugin -->
   <annotatedJdk>$\{org.checkerframework:jdk8:jar\}</annotatedJdk>
+  <errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
 </properties>
 \end{alltt}
 
@@ -871,46 +880,6 @@ section, or add it if it is not present.
   </plugin>
 \end{alltt}
 
-
-\item If you are using Java 8, use the javac from Error Prone.
-
-\begin{alltt}
-  <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
-  <profiles>
-    <profile>
-      <id>jdk8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <properties>
-        <javac.version>9+181-r4173-1</javac.version>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.google.errorprone</groupId>
-          <artifactId>javac</artifactId>
-          <version>9+181-r4173-1</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <fork>true</fork>
-              <compilerArgs combine.children="append">
-                <arg>-J-Xbootclasspath/p:$\{settings.localRepository\}/com/google/errorprone/javac/$\{javac.version\}/javac-$\{javac.version\}.jar</arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-\end{alltt}
-
-
 \item Direct the Maven compiler plugin to use the desired checkers.
 Change the reference to the \code{maven-compiler-plugin} within the \code{<plugins>}
 section, or add it if it is not present.
@@ -924,8 +893,11 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
     <version>3.8.0</version>
     <configuration>
       <fork>true</fork>
+      <!-- If using JDK 8, add source and target. -->
       <source>1.8</source>
       <target>1.8</target>
+      <!-- If using JDK 11, remove source and target and uncomment "release" below. -->
+      <!-- <release>11</release> -->
       <compilerArguments>
         <Xmaxerrs>10000</Xmaxerrs>
         <Xmaxwarns>10000</Xmaxwarns>
@@ -941,9 +913,13 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
         <!-- Add all the checkers you want to enable here -->
         <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
       </annotationProcessors>
-      <compilerArgs combine.children="append">
-        <!-- location of the annotated JDK, which comes from a Maven dependency -->
+      <compilerArgs>
+        <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
+        <arg>-J-Xbootclasspath/p:$\{errorProneJavac\}</arg>
+        <!-- location of the annotated JDK 8, which comes from a Maven dependency -->
         <arg>-Xbootclasspath/p:$\{annotatedJdk\}</arg>
+        <!-- If using JDK 11 remove the two arguments above and uncomment the one below -->
+        <!-- <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg> -->
         <!-- -Awarns turns type-checking errors into warnings. -->
         <!-- <arg>-Awarns</arg> -->
       </compilerArgs>
