Tweak in manual

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -254,6 +254,8 @@ Here is a good way to proceed.
   During manual checking, ask
   yourself what reasoning you applied, what information you needed, and
   whether your written-down rules were sufficient.
+  It is more efficient to find problems now rather than after coding up
+  your design.
 
 \item
   Implement the type qualifiers and hierarchy
