Issue warning for invalid annotation locations. (#2677)
Also, adds a command line option -AignoreInvalidAnnotationLocations to suppress the warnings.

(Follow up to #2672 )

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -641,6 +641,8 @@ Unsound checking: ignore some errors
   supply \code{-Xmaxwarns 10000}, because by default \<javac> prints at
   most 100 warnings.  If you use this, don't supply \code{-Werror},
   which is a javac argument to halt compilation if a warning is issued.
+\item \<-AignoreInvalidAnnotationLocations>
+  Ignore annotations in bytecode that have invalid annotation locations.
 \end{itemize}
 
 \label{unsound-by-default}
