--- a/docs/manual/constant-value-checker.tex
+++ b/docs/manual/constant-value-checker.tex
@@ -338,8 +338,8 @@ manual analysis.
 
 The Constant Value Checker considers all elements of a String concatenation
 non-null by default. The \code{-AnullStringsConcatenation} command-line option
-makes the checker more sound by analyzing the possibility of each element to
-be null. Only String literals, primitive types and effectively final variables
+makes the checker more sound by assuming that all objects can be null. Only
+String literals, primitive types, and effectively final variables
 are considered non-null. Figure~\ref{fig-null-strings-concat} gives an example
 of behavior with and without the \code{-AnullStringsConcatenation} option.
 
@@ -347,8 +347,9 @@ of behavior with and without the \code{-AnullStringsConcatenation} option.
 \begin{Verbatim}
   ...
   // This String can be null
-  @StringVal("a") String string1;
-  // The possible value "nullb" is omitted
+  @StringVal("a") String string1 = getString();
+  // With the command-line option, string2 can be "nullb" too, so an error is
+  // expected in this case.
   @StringVal("ab") String string2 = string1 + "b";
 \end{Verbatim}
 \caption{With the \code{-AnullStringsConcatenation} command-line option, the
